--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
 href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <!-- 
 <link rel="stylesheet" href="./style.css"> -->
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/stylee.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
